@@ -523,6 +523,7 @@ void *req_altauthenuser(
     {
     /* FAILED */
     pthread_mutex_unlock(svr_conn[s].cn_mutex);
+  	req_reject(PBSE_SYSTEM, 0, preq, NULL, "munge failure");
     return(NULL);
     }
 
